All_Component_DX/force-app/main/default/objects/ProductIQProfile__c/ProductIQProfile__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object stores ProductIQ configuration detail that maps to its corresponding ServiceMax profile.</description>
    <label>ProductIQ Profile</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProductIQ Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>