All_Component_DX/force-app/main/default/objects/ProductIQProfile__c/fields/Contents__c.field-meta.xml
<CustomField>
    <fullName>Contents__c</fullName>
    <description>JSON representation of Actions and Filters</description>
    <label>Contents</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>