All_Component_DX/force-app/main/default/objects/ProductIQProfile__c/fields/IsGlobal__c.field-meta.xml
<CustomField>
    <fullName>IsGlobal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGlobal</label>
    <type>Checkbox</type>
</CustomField>