All_Component_DX/force-app/main/default/objects/ProductIQProfile__c/fields/IsStandard__c.field-meta.xml
<CustomField>
    <fullName>IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify Standard User Actions for the selected Group Profile in the Product IQ Setup Page.</description>
    <inlineHelpText>This field is used to identify Standard User Actions for the selected Group Profile in the Product IQ Setup Page.</inlineHelpText>
    <label>IsStandard</label>
    <type>Checkbox</type>
</CustomField>